２つめの結果表示画面の作成とhtmlの修正

--- a/src/main/resources/templates/exam02-result2.html
+++ b/src/main/resources/templates/exam02-result2.html
@@ -5,14 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<h1>
-  足し算結果画面
-</h1>
 <span th:text="${session.num1}"></span>
 <span>+</span>
 <span th:text="${session.num2}"></span>
 <span>=</span>
-<span th:text="${session.result}"></span><br>
-<a th:href="@{exam02/result2}">リンク</a>
+<span th:text="${session.result}"></span>
 </body>
 </html>
