--- a/src/main/resources/templates/exam02-result.html
+++ b/src/main/resources/templates/exam02-result.html
@@ -13,6 +13,6 @@
 <span th:text="${session.num2}"></span>
 <span>=</span>
 <span th:text="${session.result}"></span><br>
-<a th:href="@{exam02/result2}">リンク</a>
+<a th:href="@{/exam02/result2}">リンク</a>
 </body>
 </html>
