--- a/src/main/resources/templates/exam02-result2.html
+++ b/src/main/resources/templates/exam02-result2.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>
+    足し算結果画面
+</h1>
 <span th:text="${session.num1}"></span>
 <span>+</span>
 <span th:text="${session.num2}"></span>
